add SubGroup
cleanup code