@@ -15,14 +15,11 @@ import com.ru.studybuddy.user.rest.CreateStudentRequest;
 import com.ru.studybuddy.user.rest.CreateStudentResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.hibernate.mapping.Collection;
-import org.hibernate.query.Order;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.RepresentationModel;
 import org.springframework.hateoas.mediatype.hal.HalModelBuilder;
-import org.springframework.hateoas.server.core.EmbeddedWrappers;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
@@ -30,7 +27,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
@@ -115,7 +111,7 @@ public class UserService {
         List<EntityModel<UserDto>> users = repository.findAll()
                 .stream()
                 .map(assembler::toModel)
-                .collect(Collectors.toList());
+                .toList();
         return CollectionModel.of(users,
                 linkTo(methodOn(UserController.class).test()).withSelfRel());
     }
@@ -133,10 +129,9 @@ public class UserService {
                 groupId
         );
         log.info(userSpec.toString());
-        List<User> users = repository.findAll(userSpec);
 
         List<EntityModel<UserDto>> students = repository.findAll(userSpec).stream()
-                .map(assembler::toModel).collect(Collectors.toList());
+                .map(assembler::toModel).toList();
         return HalModelBuilder.emptyHalModel()
                 .embed(!students.isEmpty()?students:Collections.emptyList(),UserDto.class)
                 .link(linkTo(methodOn(UserController.class).getStudents(name, departmentTitle, specialtyTitle, groupId)).withSelfRel())
